[package]
name = "rcli"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
backtrace-on-stack-overflow = "0.3.0"
clap = { version = "4.5.7", features = ["derive"] }
csv = "1.3.0"
rand = "0.8.5"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
toml = "0.8.14"
zxcvbn = "3.0.1"
